Change to DocViper666 repo

--- a/.env
+++ b/.env
@@ -35,3 +35,7 @@ CLUSTER_DB_PORT=3306
 
 # NGNIX Webserver (Minimal Webinterface)
 CLUSTER_WEBSERVER_EXPOSEDPORT=80
+
+# Spiderweb specific config, optional
+SPIDERWEB_PAGEREFRESH_MS=15000
+SPIDERWEB_ENABLE_CQFILTER=n
