--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -114,10 +114,12 @@ services:
       - CLUSTERWEB_DATABASE=${CLUSTER_DB_NAME}
       - CLUSTER_CALLSIGN=${CLUSTER_CALLSIGN}
       - CLUSTER_SYSOP_EMAIL=${CLUSTER_SYSOP_EMAIL}
+      - SPIDERWEB_PAGEREFRESH_MS=${SPIDERWEB_PAGEREFRESH_MS}
       - CLUSTER_DX_HOSTNAME=${CLUSTER_DX_HOSTNAME}
       - CLUSTER_PORT=${CLUSTER_PORT}
       - CLUSTER_SYSOP_CALLSIGN=${CLUSTER_SYSOP_CALLSIGN}
       - CLUSTER_SYSOP_PASSWORD=${CLUSTER_SYSOP_PASSWORD}
+      - SPIDERWEB_ENABLE_CQFILTER=${SPIDERWEB_ENABLE_CQFILTER}
     depends_on:
       cluster-db:
         condition: service_healthy
