Change Telnet user

--- a/.env
+++ b/.env
@@ -39,3 +39,5 @@ CLUSTER_WEBSERVER_EXPOSEDPORT=80
 # Spiderweb specific config, optional
 SPIDERWEB_PAGEREFRESH_MS=15000
 SPIDERWEB_ENABLE_CQFILTER=n
+SPIDERWEB_TELNET_USER=XX1XXZ
+SPIDERWEB_TELNET_PASSWORD=
