--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,8 +125,8 @@ services:
       - SPIDERWEB_PAGEREFRESH_MS=${SPIDERWEB_PAGEREFRESH_MS}
       - CLUSTER_DX_HOSTNAME=${CLUSTER_DX_HOSTNAME}
       - CLUSTER_PORT=${CLUSTER_PORT}
-      - CLUSTER_SYSOP_CALLSIGN=${CLUSTER_SYSOP_CALLSIGN}
-      - CLUSTER_SYSOP_PASSWORD=${CLUSTER_SYSOP_PASSWORD}
+      - SPIDERWEB_TELNET_USER=${SPIDERWEB_TELNET_USER}
+      - SPIDERWEB_TELNET_PASSWORD=${SPIDERWEB_TELNET_PASSWORD}
       - SPIDERWEB_ENABLE_CQFILTER=${SPIDERWEB_ENABLE_CQFILTER}
     depends_on:
       cluster-db:
